--- a/Mission06_jhalver6/Views/Shared/_Layout.cshtml
+++ b/Mission06_jhalver6/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Podcast">My Podcasts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CollectionList">My Collection</a>
+                        </li>
                     </ul>
                 </div>
             </div>
